# ChangeLog for media-video/ogle-gui
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-video/ogle-gui/Attic/ChangeLog,v 1.5 2002/06/21 12:12:03 stroke Exp $

*ogle-gui-0.8.3-r1 (21 Jun 2002)

  21 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> ogle-gui-0.8.3-r1.ebuild
  
  Previous versions were failing to build because of gtk+2 and libglade-2 being
  unmasked. This is now fixed. 

*ogle-gui-0.8.3 (14 Jun 2002)

  14 Jun 2002; Seemant Kulleen <seemant@gentoo.org> ogle-gui-0.8.3.ebuild
  files/digest-0.8.3 :

  Version bump thanks to bsaslinux@globo.com (Bernardo S. A. Silva) in bug #
  3676

*ogle-gui-0.8.2-r3 (26 Mar 2002)

  26 Mar 2002; Bruce A. Locke <blocke@shivan.org> ogle-gui-0.8.2-r3.ebuild:

  Minor ebuild cleanups

