@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogle-gui/Attic/ogle-gui-0.8.3.ebuild,v 1.2 2002/06/15 00:35:51 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogle-gui/Attic/ogle-gui-0.8.4.ebuild,v 1.1 2002/07/01 08:12:55 seemant Exp $
 
 MY_P=${P/-/_}
 S=${WORKDIR}/${MY_P}
@@ -8,11 +8,13 @@ DESCRIPTION="GUI interface for the Ogle DVD player"
 SRC_URI="http://www.dtek.chalmers.se/groups/dvd/dist/${MY_P}.tar.gz"
 HOMEPAGE="http://www.dtek.chalmers.se/groups/dvd/"
 
-DEPEND=">=media-video/ogle-${PV} 
+
+DEPEND=">=media-video/ogle-${PV}
 	=x11-libs/gtk+-1.2*
-	dev-libs/libxml2 
-	sys-devel/bison 
-	gnome-base/libglade"
+	dev-libs/libxml2
+	sys-devel/bison
+	( >=gnome-base/libglade-0.17-r6
+	<gnome-base/libglade-2.0.0 )"
 
 RDEPEND="nls? ( sys-devel/gettext )"
 
