@@ -1,1 +1,0 @@
-MD5 0b2c949e372b7e79f9106d99c5d2ba45 ogle-0.8.2.tar.gz 480190
