@@ -1,0 +1,1 @@
+MD5 996e787ecf5cfed0411a563a5c48c1a7 ogle-0.8.4.tar.gz 437475
