@@ -1,7 +1,8 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# Author Bruce A. Locke <blocke@shivan.org>
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogle/Attic/ogle-0.8.2-r6.ebuild,v 1.2 2002/04/27 17:54:13 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogle/Attic/ogle-0.8.4.ebuild,v 1.1 2002/07/01 08:10:27 seemant Exp $
+
+inherit libtool
 
 S=${WORKDIR}/${P}
 DESCRIPTION="Ogle is a full featured DVD player that supports DVD menus"
@@ -9,11 +10,15 @@ SRC_URI="http://www.dtek.chalmers.se/groups/dvd/dist/${P}.tar.gz"
 HOMEPAGE="http://www.dtek.chalmers.se/groups/dvd/"
 
 DEPEND="media-libs/libdvdcss
-		media-libs/jpeg 
-		>=dev-libs/libxml2-2.4.19
-		media-libs/libdvdread 
-		=media-libs/a52dec-0.7.2
-		x11-base/xfree"
+	media-libs/jpeg 
+	media-libs/libdvdread 
+	x11-base/xfree
+	>=dev-libs/libxml2-2.4.19
+	>=media-libs/a52dec-0.7.3
+	alsa? ( media-libs/alsa-lib )"
+
+SLOT=""
+LICENSE="GPL-2"
 
 src_compile() {
 
@@ -26,21 +31,23 @@ src_compile() {
 	
 	use mmx || myconf="--disable-mmx"
 	use oss || myconf="${myconf} --disable-oss"
+	use alsa || myconf="${myconf} --disable-alsa"
 
-	libtoolize --copy --force
+	elibtoolize
 
 	# configure needs access to the updated CFLAGS
 	CFLAGS="${CFLAGS} -I/usr/include/libxml2/libxml -I/usr/include/libxml2"
 
-	./configure --prefix=/usr --enable-shared --sysconfdir=/etc --host=${CHOST}  || die
+	econf ${myconf} || die
 	emake CFLAGS="${CFLAGS}" || die	
 
 }
 
 src_install() {
 	
-  make prefix=${D}/usr mandir=${D}/usr/share/man infodir=${D}/usr/share/info docdir=${D}/usr/share/doc/${PF}/html sysconfdir=${D}/etc install || die
-  dodoc AUTHORS COPYING ChangeLog HISTORY INSTALL NEWS README TODO doc/liba52.txt
+	einstall || die
+	dodoc AUTHORS COPYING ChangeLog HISTORY INSTALL NEWS README TODO 
+	dodoc doc/liba52.txt
 
 }
 
